1006_커리어입력하는거 만들기까지함

--- a/application/views/layout.html
+++ b/application/views/layout.html
@@ -16,7 +16,8 @@
     <script src="https://unpkg.com/vue@2.5.16/dist/vue.min.js"></script>
     <script src="https://unpkg.com/lodash@4.13.1/lodash.min.js"></script>
     <script src="https://img.streetgamer.tv/assets/scripts/php.js"></script>
-
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="/dist/js/bootbox.all.js"></script>
     <!-- Custom styles for this template -->
     <link href="/dist/css/product.css" rel="stylesheet">
 
